<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="settingVM"
            type="com.dinhtai.fchat.ui.chat.setting.group.GroupSettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayoutHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="@dimen/dp_3"
            app:layout_scrollFlags="scroll|enterAlways"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:elevation="1dp"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:navigationIconTint="@color/black">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/dp_50"
                    android:layout_toStartOf="@+id/buttonSearch"
                    android:contentDescription="@null"
                    android:text="Group"
                    android:textSize="@dimen/sp_18"
                    android:textStyle="bold" />

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/layoutAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayoutHome">

            <de.hdodenhof.circleimageview.CircleImageView
                image_group="@{settingVM.group.avatar}"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                app:civ_border_color="@color/cerulean"
                app:civ_border_width="@dimen/dp_2"
                tools:ignore="RtlHardcoded" />

            <TextView
                avatar="@{settingVM.group}"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:background="@drawable/bg_group_boder"
                android:gravity="center"
                android:textColor="@color/white"
                android:visibility="gone" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@{settingVM.group.name}"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutAvatar" />

        <TextView
            android:id="@+id/textInfoHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:hint="@string/lable_group_info_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textEditInfo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/lable_group_edit_info"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInfoHint" />

        <TextView
            android:id="@+id/textMember"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/lable_member"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textEditInfo" />

        <TextView
            android:id="@+id/textActionHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/lable_action_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMember" />

        <TextView
            android:id="@+id/textAddMember"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/lable_add_member"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textActionHint" />

        <TextView
            android:id="@+id/textShowImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/lable_show_image"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAddMember" />

        <TextView
            android:id="@+id/textPrivacyHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_20"
            android:hint="@string/lable_privacy_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textShowImage" />

        <TextView
            android:id="@+id/textDeleteGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:gravity="center_vertical"
            checkAdmin="@{settingVM.isAdmin()}"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/lable_group_delete"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPrivacyHint" />

        <TextView
            android:id="@+id/textLeaveGroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/lable_group_leave"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDeleteGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
