<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main"
    tools:context=".GetOTP">

    <LinearLayout
        android:id="@+id/linearHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_48"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:fontFamily="sans-serif-light"
            android:text="@string/wellcome"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:maxWidth="@dimen/dp_200"
            android:text="@string/please_enter_number_phone"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        card_view:cardCornerRadius="@dimen/dp_10"
        card_view:cardElevation="2dp"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearHeader">

        <LinearLayout
            android:layout_width="@dimen/dp_300"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_20">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_boder"
                android:backgroundTint="@color/selago"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_phone"
                    android:textColor="@color/bermuda_gray" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp_5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/code_vn"
                        android:textColor="@color/bermuda_gray"
                        android:textSize="@dimen/sp_16" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editNumberPhone"
                        android:layout_width="@dimen/dp_200"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_10"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:focusable="true"
                        android:keyboardNavigationCluster="true"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_16" />

                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_boder"
                android:backgroundTint="@color/cerulean"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>
