<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAvatar"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_25"
                android:src="@drawable/gai8"
                app:civ_border_color="@color/silver"
                app:civ_border_width="@dimen/dp_1" />

            <ImageButton
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imageAvatar"
                android:layout_alignBottom="@+id/imageAvatar"
                android:background="@null"
                android:src="@drawable/ic_edit_boder" />

            <LinearLayout
                android:id="@+id/linearName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="30dp"
                android:layout_toEndOf="@+id/imageAvatar"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Lê Văn Luyện"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearName"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="30dp"
                android:layout_toEndOf="@+id/imageAvatar"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/radio_button_1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:buttonTint="@color/cerulean"
                        android:text="@string/lable_male" />

                    <RadioButton
                        android:id="@+id/radio_button_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:buttonTint="@color/cerulean"
                        android:text="@string/lable_female" />
                </RadioGroup>
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewInfo">

        <Button
            android:id="@+id/buttonShowQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/bg_boder"
            android:backgroundTint="@color/cerulean"
            android:text="@string/lable_done"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonScanQrCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_boder"
            android:backgroundTint="@color/cerulean"
            android:text="@string/notification_action_cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
